[metadata]
name = Wikkid
description = VCS-backed wiki
long_description = A wiki that is backed by Gitr or Bazaar that allows local branching of the wiki
    for later merging. Also doesn't have any page locks and uses three way merging.
version = attr:wikkid.version
author = Wikkid Developers
author_email = wikkid-dev@lists.launchpad.net
url = https://launchpad.net/wikkid

[options]
scripts = bin/wikkid-serve
packages = find:
package_dir = breezy.plugins.wikkid=plugin
include_package_data = True
install_requires =
    breezy
    docutils
    dulwich
    jinja2
    pygments
    twisted
    webob
    zope.interface

[options.package_data]
wikkid/skin =
    default/*.html
    default/favicon.ico
    default/static/*
