[metadata]
name = Wikkid
description = VCS-backed wiki
long_description = A wiki that is backed by Gitr or Bazaar that allows local branching of the wiki
    for later merging. Also doesn't have any page locks and uses three way merging.
version = attr:wikkid.version
author = Wikkid Developers
author_email = wikkid-dev@lists.launchpad.net
url = https://launchpad.net/wikkid
project_urls =
    Repository=https://github.com/wikkid-team/wikkid

[options]
scripts = bin/wikkid-serve
packages = find:
package_dir = breezy.plugins.wikkid=plugin
include_package_data = True
install_requires =
    breezy
    docutils
    dulwich
    jinja2
    merge3
    pygments
    twisted
    webob
    zope.interface
tests_require =
    testtools
    bs4
    lxml

[options.extras_require]
dev =
    testtools
    bs4
    lxml

[options.package_data]
wikkid/skin =
    default/*.html
    default/favicon.ico
    default/static/*
